# cfd-nn

./: .clangd  .cursorrules  .gitignore  BENCHMARK_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DOCUMENTATION_INDEX.md  GPU_OPTIMIZATION_SUMMARY.md  GPU_PROFILING_ANALYSIS.md  GPU_REFACTOR_STATUS.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_RESULTS.md  PR1_AUDIT.md  PROFILING_QUICK_REFERENCE.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  SCALING_RESULTS_H200.md  TESTING.md  TODO.md  VALIDATION.md  activate_venv.sh  analyze_profile_results.py  benchmark_cpu_gpu.sh  benchmark_scaling.sh  build.sh  check_phase3_kernels.sh  comprehensive_gpu_profile.sh  dns_retau180_production.cfg  gpu_profile_simple.sh  license  make.sh  paper-todo.md  perf_bench.cpp  profile_channel_512.cfg  profile_gpu_data_movement.sh  profile_gpu_large.sh  (+39 more)
.claude/: rules.md
app/: compare_channel_cpu_gpu.cpp  developing_channel.cpp  main_airfoil.cpp  main_channel.cpp  main_cylinder.cpp  main_duct.cpp  main_hills.cpp  main_periodic_hills.cpp  main_step.cpp  main_taylor_green_3d.cpp  profile_comprehensive.cpp  profile_kernels.cpp  profile_large_grid.cpp  profile_poisson_warmstart.cpp  profile_solver.cpp  test_nn_simple.cpp  test_poisson_perturbed.cpp  test_taylor_green.cpp
artifacts/: README.md  ci_metrics.json  profiling_results.md
benchmark_results_20251211_115330/: TIMING_ANALYSIS.md  timing_results.csv
data/: README.md  input_means.txt  input_stds.txt  layer0_W.txt  layer1_W.txt  layer2_W.txt  layer3_W.txt
docs/: DATASET_INFO.md  DNS_CHANNEL_GUIDE.md  GETTING_STARTED.md  GPU_BUG_FIXES_DEC8.md  GPU_FIX_SUMMARY.md  GPU_REFACTOR_SUMMARY.md  HYPRE_POISSON_SOLVER.md  LES_IBM_GPU_GUIDE.md  MODEL_ZOO_GUIDE.md  OPTIMIZATION_LOG.md  POISSON_SOLVER_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_TRAIN.md  RECYCLING_INFLOW_GUIDE.md  SOLVER_GUIDE.md  SSPRK3_IMPLEMENTATION.md  TESTING.md  TESTING_AND_VALIDATION.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  TURBULENCE_MODELS_GUIDE.md  VALIDATION.md  profiling_results_128cubed.md
examples/: README.md  run_gpu_examples_h200.sbatch  simple_cavity_test.cfg  simple_cylinder_test.cfg  simple_duct_test.cfg  simple_laminar_test.cfg  simple_poiseuille_test.cfg  simple_sst_test.cfg
include/: checkpoint.hpp  config.hpp  cuda_halo.hpp  cuda_reductions.hpp  cuda_smoother.hpp  decomposition.hpp  features.hpp  fields.hpp  gpu_buffer.hpp  gpu_kernels.hpp  gpu_utils.hpp  halo_exchange.hpp  ibm_forcing.hpp  ibm_geometry.hpp  mesh.hpp  mg_cuda_kernels.hpp  momentum_solver_hypre.hpp  mpi_check.hpp  nn_core.hpp  numerics.hpp  poisson_bc_utils.hpp  poisson_solver.hpp  poisson_solver_fft.hpp  poisson_solver_fft1d.hpp  poisson_solver_fft2d.hpp  poisson_solver_fft_base.hpp  poisson_solver_fft_mpi.hpp  poisson_solver_hypre.hpp  poisson_solver_multigrid.hpp  profiling.hpp  qoi_extraction.hpp  solver.hpp  solver_kernels.hpp  stencil_operators.hpp  timing.hpp  turbulence_baseline.hpp  turbulence_device_view.hpp  turbulence_earsm.hpp  turbulence_gep.hpp  turbulence_gradients.hpp  (+8 more)
optimization_profile_20251211_113840/: OPTIMIZATION_REPORT.md  kernel_stats.txt
paper/: BLOCKING_ITEMS.md  BUG_REPORT.md  CONVERGENCE_STATUS.md  CRITICAL_ACTIONS.md  GAP_ANALYSIS.md  MLP_FAILURE_ANALYSIS.md  PAPER_PLAN.md  PARETO_FRAMEWORK.md  POISSON_DOMINANCE_INSIGHT.md  RESULTS_SUMMARY.md  REVISION_PLAN.md  RE_MISMATCH_ANALYSIS.md  SESSION_STATE.md  SIMPLE_PLAN.md  SIMPLE_STATUS.md  TODO.md  hills_cf_comparison.txt  main.tex  references.bib  roadmap.md
profiles/: taylor_green_fft_kernels.txt  taylor_green_fft_memops.txt  taylor_green_fft_nvtx.txt  taylor_green_fft_stats.txt
scaling_results_20251211_120750/: SCALING_ANALYSIS.md  scaling_results.csv
scripts/: build.sh  check_code_sharing.sh  check_symbol_uniqueness.sh  ci.sh  compare_models.py  detect_gpu_cc.sh  download_mcconkey_data.sh  download_reference_data.sh  export_pytorch.py  export_tensorflow.py  fix_normalization_stats.py  generate_dummy_weights.py  generate_validation_report.py  les_cylinder_re3900.sh  lint_gpu_pointers.sh  parse_validation_results.sh  populate_all_gpu_baselines.sh  populate_gpu_baseline.sh  preprocess_mcconkey_csv.py  profile_gpu_utilization.sh  run_all_models.py  run_all_models.sh  run_ci_local.sh  run_gpu_ci_test.sh  run_nsys_profiles.sh  run_validation.sh  safe_extract.py  slurm_h200_validation.sh  spectral_analysis.py  train_mlp_mcconkey.py  train_realdata_local.sh  train_tbnn_mcconkey.py  validate_model_files.py  validate_output.sh  validate_trained_model.py
src/: checkpoint.cpp  config.cpp  decomposition.cpp  features.cpp  fields.cpp  gpu_init.cpp  gpu_kernels.cpp  halo_exchange.cpp  ibm_forcing.cpp  ibm_geometry.cpp  mesh.cpp  mg_cuda_kernels.cpp  momentum_solver_hypre.cpp  nn_core.cpp  poisson_solver.cpp  poisson_solver_fft.cpp  poisson_solver_fft1d.cpp  poisson_solver_fft2d.cpp  poisson_solver_fft_mpi.cpp  poisson_solver_hypre.cpp  poisson_solver_multigrid.cpp  qoi_extraction.cpp  solver.cpp  solver_energy_diagnostics.cpp  solver_gpu_buffers.cpp  solver_operators.cpp  solver_periodic_halos.cpp  solver_recycling.cpp  solver_time.cpp  solver_time_kernels.hpp  solver_time_kernels_blend.cpp  solver_time_kernels_copy.cpp  solver_time_kernels_euler.cpp  solver_time_kernels_implicit.cpp  solver_time_kernels_periodic.cpp  solver_time_kernels_projection.cpp  solver_time_kernels_simple.cpp  solver_time_simple.cpp  solver_turbulence_diagnostics.cpp  solver_vtk.cpp  (+16 more)
tests/: bench_256.cpp  bench_3d_gpu.cpp  bench_fft_stretched_timing.cpp  bench_fft_vs_mg.cpp  bench_les_ibm_gpu.cpp  bench_mg.cpp  bench_mg_bc_sweep.cpp  bench_mg_cuda_graphs.cpp  bench_mg_tuning.cpp  bench_mpi_poisson.cpp  reference_data.hpp  test_2d_3d_comparison.cpp  test_3d_bc_application.cpp  test_3d_bc_corners.cpp  test_3d_gradients.cpp  test_3d_poiseuille_fast.cpp  test_3d_quick_validation.cpp  test_3d_solver.cpp  test_3d_unified.cpp  test_3d_w_velocity.cpp  test_adaptive_dt.cpp  test_advection_rotation.cpp  test_all_turbulence_models_smoke.cpp  test_backend_canary.cpp  test_backend_execution.cpp  (+159 more)
tools/: spkt  (+3 more)
(+364 files in other folders)
